--- a/Styles/main.css
+++ b/Styles/main.css
@@ -17,3 +17,10 @@ header h2{
     color: #089;
     text-indent: 30px;
 }
+
+header img {
+    float: left;
+}
+.shadow {
+    text-shadow: 2px 2px 2px rgb(120, green, blue);
+}
