--- a/Styles/main.css
+++ b/Styles/main.css
@@ -24,3 +24,13 @@ header img {
 .shadow {
     text-shadow: 2px 2px 2px rgb(120, green, blue);
 }
+main{
+    clear: left;
+}
+main h3 {
+    margin-top: 3em;
+    font-size: 105%;
+}
+#id{
+line-height: 105%;
+}
