--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,10 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
+    background-image:url("../images/SH_orange.png");
+    background-position: right;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
 }
 a:hover, a:focus {
     font-style: italic;
