--- a/styles/main.css
+++ b/styles/main.css
@@ -42,12 +42,32 @@ main{
     clear: left;
 }
 main h3 {
-    margin-top: 3em;
+    margin-top: 3em 2em 1.5em;
     font-size: 105%;
+    border: 5px double blue;
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 4px red;
+    padding: 1em;
 }
-#id{
-line-height: 105%;
+main nav {
+    margin: 1.5em 2em 1.5em;
+    border: 5px dashed blue;
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 4px red;
+    padding: .5em;
+
 }
+#list {
+    line-height: 105%;
+}
+main div {
+margin: 1.5em 2em 0 2em;
+border: 5px dotted blue;
+border-radius: 20px;
+box-shadow: 3px 3px 4px 4px red;
+padding: 1em;
+}
+
 footer p.copyright{
     text-align: center;
     font-size: 80%;
