--- a/styles/main.css
+++ b/styles/main.css
@@ -43,7 +43,7 @@ main{
     clear: left;
 }
 main h3 {
-    margin-top: 3em 2em 1.5em;
+    margin: 3em 2em 1.5em;
     font-size: 105%;
     border: 5px double blue;
     border-radius: 20px;
