--- a/styles/project.css
+++ b/styles/project.css
@@ -21,6 +21,10 @@ a:hover, a:focus {
     font-style: italic;
     color: orangered;
 }
+header{
+    clear: both;
+    border-top: 2px solid maroon;
+}
 header h1{
     font-size: 175%;
     color: maroon;
