--- a/styles/project.css
+++ b/styles/project.css
@@ -12,10 +12,6 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image:url("../images/SH_orange.png");
-    background-position: right;
-    background-repeat: repeat-y;
-    background-attachment: fixed;
 }
 a:hover, a:focus {
     font-style: italic;
@@ -71,7 +67,7 @@ aside {
     width: 20%;
     float: right;
     background-color: #089;
-    padding: 20%;
+    padding: 2em;
 }
 footer{
     clear: both;
