--- a/styles/project.css
+++ b/styles/project.css
@@ -35,6 +35,8 @@ header h2{
 header img {
     float: left;
     margin-left: 2em;
+    border: 3px;
+    border-color: black;
 }
 .shadow {
     text-shadow: 2px 2px 2px rgb(120, 128, 255);
