--- a/styles/project.css
+++ b/styles/project.css
@@ -43,7 +43,7 @@ header img {
 article{
     clear: both;
     width: 70%;
-    float: none;
+    float: left;
     column-count: 2;
     column-rule: 2px dotted maroon;
     column-gap: 2em;
