--- a/styles/project.css
+++ b/styles/project.css
@@ -79,10 +79,10 @@ footer p.copyright{
     font-size: 80%;
 }
 p.fixed{
-    width:fit-content;
+    width:auto;
     position: fixed;
     bottom: 35%;
-    right: 0;
+    right: 10%;
     border: 3px solid darkgreen;
     background-color: lightgreen;
 }
