--- a/styles/andrew.css
+++ b/styles/andrew.css
@@ -13,8 +13,7 @@ body {
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
     background-image:url("../images/funnycats.jpg");
-    background-position: right;
-    background-repeat: repeat-y;
+    background-position:center;
     background-attachment: fixed;
 }
 a:hover, a:focus {
