--- a/styles/andrew.css
+++ b/styles/andrew.css
@@ -44,6 +44,7 @@ main{
 main h3 {
     margin: 3em 2em 1.5em;
     font-size: 105%;
+    color: white;
     border: 5px double blue;
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
@@ -52,6 +53,7 @@ main h3 {
 main nav {
     margin: 1.5em 2em 1.5em;
     border: 5px dashed blue;
+    color: white;
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
     padding: .5em;
@@ -63,6 +65,7 @@ main nav {
 main div {
 margin: 1.5em 2em 0 2em;
 border: 5px dotted blue;
+color: white;
 border-radius: 20px;
 box-shadow: 3px 3px 4px 4px red;
 padding: 1em;
