--- a/styles/andrew.css
+++ b/styles/andrew.css
@@ -53,7 +53,7 @@ main h3 {
 main nav {
     margin: 1.5em 2em 1.5em;
     border: 5px dashed blue;
-    color: white;
+    color: red;
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
     padding: .5em;
