--- a/styles/andrew.css
+++ b/styles/andrew.css
@@ -12,7 +12,7 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image:url("../images/funnycats.jpg");
+    background-image:url("../images/neoncat.gif");
     background-position:center;
     background-attachment: fixed;
 }
