--- a/styles/main.css
+++ b/styles/main.css
@@ -12,9 +12,7 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image:url("../images/SH_orange.png");
-    background-position: right;
-    background-repeat: repeat-y;
+    background-image:url("../images/shsumovie.gif");
     background-attachment: fixed;
 }
 a:hover, a:focus {
