--- a/styles/GSS.css
+++ b/styles/GSS.css
@@ -14,6 +14,8 @@ body {
     box-shadow: 5px 5px 0 0;
     background-image:url("../images/SH_orange.png");
     background-attachment: fixed;
+    background-position: center;
+    background-repeat:repeat-y;
 }
 a:hover, a:focus {
     font-style: italic;
