--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,5 +1,5 @@
 #nav_menu ul { list-style-type: none; }
-#nav_menu ul li { float: left; }
+#nav_menu ul li { float: center; }
 #nav_menu ul li a {
     text-align: center;
     display: block;
@@ -16,6 +16,7 @@
 
 article{
     clear: both;
+    float: center;
 }
 aside ol{
     list-style-type: upper-roman;
