--- a/styles/menu.css
+++ b/styles/menu.css
@@ -23,7 +23,13 @@ aside ol{
 aside ul{
     list-style-type: square;
 }
+nav{
+    text-align: center;
+}
 h1{
     text-align: center;
     color: blueviolet;
+}
+h2{
+    color: rgb(226, 43, 43);
 }
