--- a/styles/exam.css
+++ b/styles/exam.css
@@ -85,7 +85,15 @@ aside {
     float: right;
     background-color: #089;
     padding: .5em;
+    
 }
+aside ol{
+    list-style-type: upper-roman;
+}
+aside ul{
+    list-style-type: square;
+}
+
 footer{
     clear: both;
     border-top: 2px solid maroon;
