--- a/styles/exam.css
+++ b/styles/exam.css
@@ -83,6 +83,7 @@ article p::first-letter{
 aside {
     width: 20%;
     float: right;
+    right: 25%;
     position: fixed;
     background-color: #089;
     padding: .5em;
