--- a/styles/exam.css
+++ b/styles/exam.css
@@ -21,11 +21,14 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width:1000px; 
+    width:95%; 
     background-color: white;
     margin: 15px auto;
     padding: 15px 1.5em;
     border: 1px solid black;
+    background-image:url("../images/SH_orange.png");
+    background-position: right;
+    background-repeat: repeat-y;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
 }
@@ -58,7 +61,7 @@ header img {
 }
 article{
     clear: both;
-    width: 70%;
+    width: 75%;
     float: left;
     column-count: 3;
     column-rule: 2px dotted maroon;
@@ -83,7 +86,7 @@ article p::first-letter{
 aside {
     width: 20%;
     float: right;
-    right: 25%;
+    right: 15%;
     position: fixed;
     background-color: #089;
     padding: .5em;
