--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,8 @@ body {
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
     background-image:url("../images/shsumovie.gif");
+    background-position: right;
+    background-repeat: repeat-y;
     background-attachment: fixed;
 }
 a:hover, a:focus {
