--- a/styles/exam.css
+++ b/styles/exam.css
@@ -26,8 +26,8 @@ body {
     margin: 15px auto;
     padding: 15px 1.5em;
     border: 1px solid black;
-    background-image:url("../images/SH_orange.png");
-    background-position: right 5%;
+    background-image:url("../images/SH_orange.png") height=50 width=50;
+    background-position: right;
     background-repeat: repeat-y;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
