--- a/styles/exam.css
+++ b/styles/exam.css
@@ -26,7 +26,8 @@ body {
     margin: 15px auto;
     padding: 15px 1.5em;
     border: 1px solid black;
-    background-image:url("../images/SH_orange.png") height=50 width=50;
+    background-image:url("../images/SH_orange.png");
+    background-size: 50;
     background-position: right;
     background-repeat: repeat-y;
     border-radius: 25px;
