--- a/styles/quiz7.css
+++ b/styles/quiz7.css
@@ -37,17 +37,27 @@ html, body {
     /*-------------------------------------------------------------*/
     table.third {
         border-collapse: collapse;
-        border: 2px solid purple;
+        border: 2px solid orange;
         caption-side: bottom;
         }
         table.third th {
-        background-color: salmon;
+        background-color: lightgreen
         }
         table.third th, table.third td {
         padding: 0.7em;
         vertical-align: middle;
-        border: 2px solid purple;
+        border: 0px white;
         }
         table.third thead tr:first-child{
-        border-bottom: 2px solid purple;
+        border-bottom: 0px white;
         } 
+        @media only screen and (max-width: 425px) {
+            th, td {
+                display: block;
+            }
+            thead, td.number {
+                display: none;
+                padding: 0;
+            }    
+        }
+        
