--- a/styles/quiz7.css
+++ b/styles/quiz7.css
@@ -46,10 +46,10 @@ html, body {
         table.third th, table.third td {
         padding: 0.7em;
         vertical-align: middle;
-        border: 0px white;
+        border: 2px orange;
         }
         table.third thead tr:first-child{
-        border-bottom: 0px white;
+        border-bottom: 2px orange;
         } 
         @media only screen and (max-width: 425px) {
             th, td {
