--- a/styles/quiz7.css
+++ b/styles/quiz7.css
@@ -37,11 +37,11 @@ html, body {
     /*-------------------------------------------------------------*/
     table.third {
         border-collapse: collapse;
-        border: 2px solid orange;
-        caption-side: bottom;
         }
-        table.third th {
-        background-color: lightgreen
+        table.third thead {
+        background-color: lightgreen;
+        border-top: 2px orange;
+        border-bottom: 2px orange;
         }
         table.third th, table.third td {
         padding: 0.7em;
@@ -49,7 +49,7 @@ html, body {
         border: 2px orange;
         }
         table.third thead tr:first-child{
-        border-bottom: 2px orange;
+        
         } 
         @media only screen and (max-width: 425px) {
             th, td {
