--- a/styles/quiz7.css
+++ b/styles/quiz7.css
@@ -54,7 +54,7 @@ html, body {
             border-top: 2px orange;
             border-bottom: 2px orange;
         } 
-        table.third thead tr:third-child{
+        table.third thead tr:last-child{
             border-bottom: 2px orange;
         } 
         @media only screen and (max-width: 425px) {
