--- a/styles/quiz7.css
+++ b/styles/quiz7.css
@@ -53,6 +53,10 @@ html, body {
             border-top: 2px red;
             border-bottom: 2px red;
         } 
+        table.third tbody {
+            border-bottom: 2px rgb(255, 115, 0);
+            border-top: 2px rgb(255, 115, 0);
+        } 
         table.third thead tr:last-child{
             border-bottom: 2px orange;
         } 
