--- a/styles/quiz7.css
+++ b/styles/quiz7.css
@@ -50,7 +50,7 @@ html, body {
         vertical-align: middle;
         }
         table.third thead tr:first-child{
-        
+        border-bottom: 2px solid red;
         } 
         table.third tbody {
             border-bottom: 2px solid red;
