--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -12,12 +12,12 @@ body {
     text-align: center;
   }
   header img {
+    position: absolute;
+    top: auto;
     float: left;
     margin-left: 2em;
     border: 3px black;
-    height: 50px;
-    width: auto;
-    transition: transform 0.3s ease-in-out;
+
   }
   nav {
     display: flex;
