--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -4,12 +4,17 @@ body {
     line-height: 1.6;
     background-color: #f4f4f4;
   }
-  
+  section{
+    font-family:"Times New Roman";
+    font-size:28px;
+  }
   header {
     background-color:  darkorange;
     color: #fff;
     padding: 1rem 0;
     text-align: center;
+    font-family:"Times New Roman";
+    font-size:28px;
   }
   header img {
     
@@ -66,12 +71,55 @@ body {
     padding: 1rem 0;
     margin-top: 2rem;
   }
-  @media only screen and (max-width: 425px) {
-    th, td {
-        display: block;
-    }
-    thead, td.number {
-        display: none;
-        padding: 0;
-    }    
-} 
+  @media only screen and (max-width:700px)
+  {
+      .menu-button-container {
+          display: flex;
+      }
+      .menu {
+          position: absolute;
+          top: 0;
+          margin-top: 50px;
+          left: 0;
+          flex-direction: column;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
+      }
+      #menu-toggle ~ .menu li {
+          height: 0;
+          margin: 0;
+          padding: 0;
+          border: 0;
+          transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      }
+      #menu-toggle:checked ~ .menu li {
+          border: 1px solid #333;
+          height: 2.5em;
+          padding: 0.5em;
+          transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      }
+      .menu > li {
+          display: flex;
+          justify-content: center;
+          margin: 0;
+          padding: 0.5em 0;
+          width: 100%;
+          color: white;
+          background-color: #222;
+      }
+      .menu > li:not(:last-child) {
+          border-bottom: 1px solid #444;
+      }
+      article h2{
+          font-size: 1.1em;
+      }
+      article p{
+          font-size: .5em;
+      }
+      footer{
+          border-top: 1px solid #f46b45;
+          text-align: center;
+          font-size: .6em;
+      }
+  }
