--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -33,7 +33,7 @@ body {
   nav a {
     color: #fff;
     padding: 1rem;
-    text-decoration: none;
+    text-decoration:underline;
   }
   
   nav a:hover {
