--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -72,50 +72,37 @@ body {
   }
   @media only screen and (max-width:700px)
   {
-      .menu-button-container {
-          display: flex;
-      }
-      .menu {
-          position: absolute;
-          top: 0;
-          margin-top: 50px;
-          left: 0;
-          flex-direction: column;
-          width: 100%;
-          justify-content: center;
-          align-items: center;
-      }
-      #menu-toggle ~ .menu li {
-          height: 0;
-          margin: 0;
-          padding: 0;
-          border: 0;
-          transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-      }
-      #menu-toggle:checked ~ .menu li {
-          border: 1px solid #333;
-          height: 2.5em;
-          padding: 0.5em;
-          transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-      }
-      .menu > li {
-          display: flex;
-          justify-content: center;
-          margin: 0;
-          padding: 0.5em 0;
-          width: 100%;
-          color: white;
-          background-color: #222;
-      }
-      .menu > li:not(:last-child) {
-          border-bottom: 1px solid #444;
-      }
-      article h2{
-          font-size: 1.1em;
-      }
-      article p{
-          font-size: .5em;
-      }
+      /* Hamburger Style */
+    .hamburger {
+     display: none;
+    font-size: 2rem;
+    background-color: #444;
+    color: white;
+    padding: 1rem;
+    cursor: pointer;
+    }
+
+/* Responsive Navigation */
+@media (max-width: 768px) {
+  .hamburger {
+    display: block;
+  }
+
+  nav {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  nav.show {
+    display: flex;
+  }
+
+  nav a {
+    width: 100%;
+    border-top: 1px solid #555;
+  }
+}
       footer{
           border-top: 1px solid #f46b45;
           text-align: center;
