--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -76,9 +76,10 @@ body {
   @media only screen and (max-width:700px)
   {/* Hide the checkbox */
   /* Hide the checkbox */
-.menu-toggle {
-  display: none;
-}
+  .menu-toggle {
+    position: absolute;
+    left: -9999px;
+  }
 
 /* Hamburger icon (hidden by default, shown on small screens) */
 .hamburger {
