--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -16,6 +16,12 @@ header {
   font-family:"Times New Roman";
   font-size:28px;
 }
+header h1, header h2 {
+  font-family: 'Georgia', 'Arial', serif;
+  letter-spacing: 1px;
+  color: white; /* SHSU Orange */
+}
+
 .floating-logo {
   position:absolute;
   top: 10px;
@@ -114,7 +120,7 @@ z-index: 1;
 height: 100%;
 display: flex;
 align-items: center;
-justify-content: center;
+justify-content: top;
 color: white;
 text-shadow: 1px 1px 5px black;
 font-size: 2rem;
