--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -179,16 +179,15 @@ footer {
 @media only screen and (max-width:700px)
 {/* Hide the checkbox */
 /* Hide the checkbox */
-.menu-toggle {
-  position: absolute;
-  left: -9999px;
+input.menu-toggle {
+  display: none;
 }
 
 /* Hamburger icon (hidden by default, shown on small screens) */
-.hamburger {
+label.hamburger {
 display: none;
 font-size: 2rem;
-background-color: #444;
+background-color: navy;
 color: white;
 padding: 1rem;
 cursor: pointer;
