--- a/project/styles/homepage copy.css
+++ b/project/styles/homepage copy.css
@@ -181,9 +181,10 @@ footer {
       display: flex;
       flex-direction: row;
       align-items: center;
+      text-decoration: underline;
       justify-content: space-between;
       background-color: #00BAF0;
-      background: linear-gradient(to left, #f46b45, #eea849);
+      background: linear-gradient(to left, navy, white);
       /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       color: #FFF;
       height: 3em;
