--- a/project/styles/homepage copy.css
+++ b/project/styles/homepage copy.css
@@ -184,7 +184,7 @@ footer {
       text-decoration: underline;
       justify-content: space-between;
       background-color: #00BAF0;
-      background: linear-gradient(to left, navy, white);
+      background: linear-gradient(to left, navy, blue);
       /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       color: #FFF;
       height: 3em;
