--- a/project/styles/homepage copy.css
+++ b/project/styles/homepage copy.css
@@ -213,7 +213,7 @@ footer {
       /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       color: #FFF;
       height: 3em;
-      padding: 1em;
+      padding: .25em;
       }
       
       .menu {
