--- a/project/styles/homepage copy.css
+++ b/project/styles/homepage copy.css
@@ -118,18 +118,18 @@ overflow: hidden;
 }
 
 .hero::before {
-content: '';
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-size: cover;
-background-position: center;
-animation: slideshow 60s infinite;
-z-index: 0;
-opacity: 0.8;
-}
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  animation: slideShow 18s infinite;
+  z-index: 0;
+  opacity: 0.8;
+  }
 
 /* Text overlay on top of slideshow */
 .hero-overlay {
