--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -118,18 +118,18 @@ overflow: hidden;
 }
 
 .hero::before {
-content: '';
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-size: cover;
-background-position: center;
-animation: slideShow 18s infinite;
-z-index: 0;
-opacity: 0.8;
-}
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  animation: slideShow 45s infinite;
+  z-index: 0;
+  opacity: 0.8;
+  }
 
 /* Text overlay on top of slideshow */
 .hero-overlay {
@@ -149,17 +149,41 @@ font-size: 2rem;
 0% {
   background-image: url('/project/images/shsubelltower.jpg');
 }
-25%{
+8%{
   background-image: url('/project/images/usitcc.png');
 }
-50% {
+16% {
   background-image: url('/project/images/itsa1.jpg');
 }
-75% {
+24% {
   background-image: url('/project/images/itsa2.jpg');
 }
-100% {
+32% {
   background-image: url('/project/images/itsa3.jpg');
+}
+40% {
+  background-image: url('/project/images/New1.jpg');
+}
+48%  {
+  background-image: url('/project/images/New2.jpg');
+}
+ 56% {
+  background-image: url('/project/images/New3.jpg');
+}
+65% {
+  background-image: url('/project/images/New4.jpg');
+}
+73%  {
+  background-image: url('/project/images/New5.jpg');
+}
+81% {
+  background-image: url('/project/images/New6.jpg');
+}
+ 89% {
+  background-image: url('/project/images/new7.png');
+}
+ 100% {
+  background-image: url('/project/images/new8.png');
 }
 }
 .content {
@@ -176,59 +200,162 @@ footer {
   padding: 1rem 0;
   margin-top: 2rem;
 }
-@media only screen and (max-width:700px)
-{/* Hide the checkbox */
-/* Hide the checkbox */
-input.menu-toggle {
-  position: absolute;
-  left: -9999px;
-}
-
-/* Hamburger icon (hidden by default, shown on small screens) */
-label.hamburger {
-display: flex;
-font-size: 2rem;
-background-color: #444;
-color: white;
-padding: 1rem;
-cursor: pointer;
-}
-
-/* Default nav menu (visible on large screens) */
-.nav-menu {
-display: flex;
-justify-content: center;
-background-color: #444;
-flex-wrap: wrap;
-}
-
-.nav-menu a {
-color: white;
-padding: 1rem;
-text-decoration: none;
-display: block;
-}
-
-/* On small screens (max-width: 768px) */
-@media (max-width: 768px) {
-.hamburger {
-  display: block;
-}
-
-.nav-menu {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-/* Show nav menu if checkbox is checked */
-.menu-toggle:checked + .hamburger + .nav-menu {
-  display: flex;
-}
-
-.nav-menu a {
-  width: 100%;
-  border-top: 1px solid #555;
-}
-  } 
-    }
+    /*---------------------------------------------------------------*/
+    .top-nav {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      text-decoration: underline;
+      justify-content: space-between;
+      background-color: #00BAF0;
+      background: linear-gradient(to left, navy, blue);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      color: #FFF;
+      height: 3em;
+      padding: .25em;
+      }
+      
+      .menu {
+      display: flex;
+      flex-direction: row;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      }
+      
+      .menu > li {
+      margin: 0 1rem;
+      overflow: hidden;
+      }
+      
+      .menu-button-container {
+      display: none;
+      height: 100%;
+      width: 30px;
+      cursor: pointer;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      }
+      
+      #menu-toggle {
+      display: none;
+      }
+      
+      .menu-button,
+      .menu-button::before,
+      .menu-button::after {
+      display: block;
+      background-color: #fff;
+      position: absolute;
+      height: 4px;
+      width: 30px;
+      transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      border-radius: 2px;
+      }
+      
+      .menu-button::before {
+      content: '';
+      margin-top: -8px;
+      }
+      
+      .menu-button::after {
+      content: '';
+      margin-top: 8px;
+      }
+      
+      #menu-toggle:checked + .menu-button-container .menu-button::before {
+      margin-top: 0px;
+      transform: rotate(405deg);
+      }
+      
+      #menu-toggle:checked + .menu-button-container .menu-button {
+      background: rgba(255, 255, 255, 0);
+      }
+      
+      #menu-toggle:checked + .menu-button-container .menu-button::after {
+      margin-top: 0px;
+      transform: rotate(-405deg);
+      }
+      /*----end of menu*/
+  
+      section a {
+          text-decoration: none;
+          color: white;
+      }
+      .menu a:hover, a.current {
+          text-decoration: underline;
+  
+      }
+      article{
+          padding: 0 1em;
+      }
+      article h2{
+          font-size: 1.25em;
+      }
+      article p{
+          font-size: 1em;
+      }
+      article img {
+          margin: auto;
+          display: block;
+          width: 100%;
+          max-width: 760px;
+      }
+      footer{
+          border-top: 2px solid #f46b45;
+          text-align: center;
+          font-size: .5em;
+      }
+      @media only screen and (max-width:700px)
+      {
+          .menu-button-container {
+              display: flex;
+          }
+          .menu {
+              position: absolute;
+              top: 0;
+              margin-top: 50px;
+              left: 0;
+              flex-direction: column;
+              width: 100%;
+              justify-content: center;
+              align-items: center;
+          }
+          #menu-toggle ~ .menu li {
+              height: 0;
+              margin: 0;
+              padding: 0;
+              border: 0;
+              transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+          }
+          #menu-toggle:checked ~ .menu li {
+              border: 1px solid #333;
+              height: 2.5em;
+              padding: 0.5em;
+              transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+          }
+          .menu > li {
+              display: flex;
+              justify-content: center;
+              margin: 0;
+              padding: 0.5em 0;
+              width: 100%;
+              color: white;
+              background-color: #222;
+          }
+          .menu > li:not(:last-child) {
+              border-bottom: 1px solid #444;
+          }
+          article h2{
+              font-size: 1.1em;
+          }
+          article p{
+              font-size: .5em;
+          }
+          footer{
+              border-top: 1px solid #f46b45;
+              text-align: center;
+              font-size: .6em;
+          }
+      }
