--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -212,7 +212,7 @@ footer {
       /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       color: #FFF;
       height: 3em;
-      padding: .25em;
+      padding: 1em;
       }
       
       .menu {
