--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -285,6 +285,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    z-index: 20;
   }
   .menu {
     position: absolute;
