--- a/project/styles/homepage copy.css
+++ b/project/styles/homepage copy.css
@@ -200,162 +200,115 @@ footer {
   padding: 1rem 0;
   margin-top: 2rem;
 }
-    /*---------------------------------------------------------------*/
-    .top-nav {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      text-decoration: underline;
-      justify-content: space-between;
-      background-color: #00BAF0;
-      background: linear-gradient(to left, navy, blue);
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      color: #FFF;
-      height: 3em;
-      padding: .25em;
-      }
-      
-      .menu {
-      display: flex;
-      flex-direction: row;
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      }
-      
-      .menu > li {
-      margin: 0 1rem;
-      overflow: hidden;
-      }
-      
-      .menu-button-container {
-      display: none;
-      height: 100%;
-      width: 30px;
-      cursor: pointer;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      }
-      
-      #menu-toggle {
-      display: none;
-      }
-      
-      .menu-button,
-      .menu-button::before,
-      .menu-button::after {
-      display: block;
-      background-color: #fff;
-      position: absolute;
-      height: 4px;
-      width: 30px;
-      transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-      border-radius: 2px;
-      }
-      
-      .menu-button::before {
-      content: '';
-      margin-top: -8px;
-      }
-      
-      .menu-button::after {
-      content: '';
-      margin-top: 8px;
-      }
-      
-      #menu-toggle:checked + .menu-button-container .menu-button::before {
-      margin-top: 0px;
-      transform: rotate(405deg);
-      }
-      
-      #menu-toggle:checked + .menu-button-container .menu-button {
-      background: rgba(255, 255, 255, 0);
-      }
-      
-      #menu-toggle:checked + .menu-button-container .menu-button::after {
-      margin-top: 0px;
-      transform: rotate(-405deg);
-      }
-      /*----end of menu*/
-  
-      section a {
-          text-decoration: none;
-          color: white;
-      }
-      .menu a:hover, a.current {
-          text-decoration: underline;
-  
-      }
-      article{
-          padding: 0 1em;
-      }
-      article h2{
-          font-size: 1.25em;
-      }
-      article p{
-          font-size: 1em;
-      }
-      article img {
-          margin: auto;
-          display: block;
-          width: 100%;
-          max-width: 760px;
-      }
-      footer{
-          border-top: 2px solid #f46b45;
-          text-align: center;
-          font-size: .5em;
-      }
-      @media only screen and (max-width:700px)
-      {
-          .menu-button-container {
-              display: flex;
-          }
-          .menu {
-              position: absolute;
-              top: 0;
-              margin-top: 50px;
-              left: 0;
-              flex-direction: column;
-              width: 100%;
-              justify-content: center;
-              align-items: center;
-          }
-          #menu-toggle ~ .menu li {
-              height: 0;
-              margin: 0;
-              padding: 0;
-              border: 0;
-              transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-          }
-          #menu-toggle:checked ~ .menu li {
-              border: 1px solid #333;
-              height: 2.5em;
-              padding: 0.5em;
-              transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-          }
-          .menu > li {
-              display: flex;
-              justify-content: center;
-              margin: 0;
-              padding: 0.5em 0;
-              width: 100%;
-              color: white;
-              background-color: #222;
-          }
-          .menu > li:not(:last-child) {
-              border-bottom: 1px solid #444;
-          }
-          article h2{
-              font-size: 1.1em;
-          }
-          article p{
-              font-size: .5em;
-          }
-          footer{
-              border-top: 1px solid #f46b45;
-              text-align: center;
-              font-size: .6em;
-          }
-      }
+/* Ensure the top-nav section is positioned relative */
+.top-nav {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  text-decoration: underline;
+  background: linear-gradient(to left, navy, blue);
+  color: white;
+  z-index: 10;
+}
+
+/* Hamburger container on small screens */
+.menu-button-container {
+  display: none;
+  position: relative;
+  z-index: 20; /* Make sure it's above the menu */
+  width: 30px;
+  height: 25px;
+  cursor: pointer;
+}
+
+/* Hamburger bars */
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: white;
+  position: absolute;
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+  transition: all 0.3s ease-in-out;
+  content: '';
+}
+
+.menu-button::before {
+  content: '';
+  top: -8px;
+}
+.menu-button::after {
+  content: '';
+  top: 8px;
+}
+
+/* Animate hamburger to X */
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: transparent;
+}
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  transform: rotate(45deg);
+  top: 0;
+}
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  transform: rotate(-45deg);
+  top: 0;
+}
+#menu-toggle {
+  display: none !important;
+  visibility: hidden;
+  opacity: 0;
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: -9999;
+}
+/* The menu */
+.menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 1rem;
+}
+
+.menu li a {
+  color: white;
+  text-decoration: none;
+}
+
+/* ===== MOBILE STYLES ===== */
+@media (max-width: 700px) {
+  .menu-button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #222;
+    width: 100%;
+    flex-direction: column;
+    max-height: 0;
+    overflow: hidden;
+    z-index: 10;
+    transition: max-height 0.3s ease-out;
+  }
+
+  #menu-toggle:checked ~ .menu {
+    max-height: 1000px; /* or enough to fit all items */
+    overflow: visible;
+   }
+
+  .menu li {
+    text-align: center;
+    padding: 1rem 0;
+    border-bottom: 1px solid #444;
+   }
+}
