--- a/project/styles/homepage.css
+++ b/project/styles/homepage.css
@@ -9,7 +9,7 @@ section{
   font-size:28px;
 }
 header {
-  background-color:  darkorange;
+  background-color:  #500000;
   color: #fff;
   padding: 1rem 0;
   text-align: center;
